# qml_translate_experiment

./: .gitignore  CMakeLists.txt  README.md  silly.pro
src/: CMakeLists.txt  main.cpp  silly.qrc  translations.qrc
src/qml/: silly.qml
src/qml/translations/: qml_de.ts  qml_en.ts  qml_fr.ts
src/translations/: qml_de.ts  qml_en.ts  qml_fr.ts
